Moved from old repo "Fireboy and watergirl".